# kaspa-tpu

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
kaspa_tpu/: __init__.py  __main__.py  main.py
kaspa_tpu/core/: __init__.py  c_miner.py  matrix.py  test_avx_miner.c  test_miner.c  tpu_matmul.py
kaspa_tpu/crypto/: __init__.py  fast_keccak.py  keccak.py  keccak_f1600.c  pow_hash.py  xoshiro.py
kaspa_tpu/mining/: __init__.py  coordinator.py  pipeline.py
kaspa_tpu/network/: __init__.py  grpc_client.py  stratum_client.py
tests/: test_kheavyhash.py
